Constrain logo width to prevent horizontal scrolling at 400% zoom

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -126,6 +126,7 @@
                 height: 19px;
                 @media(max-width: 450px) {
                     height: 15px;
+                    max-width: 80%;
                 }
                 @media(max-width: 350px) {
                     height: 12px;
